# ecobenchmark-applicationweb-backend

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  config.json  docker-compose.yml  readme.md
.github/: CODEOWNERS
builder/: database.sh  runner.sh  service.sh
migrations/: 20220408080000_init.sql  20221111221000_fixtures.sql  Dockerfile
results/: 20220605000000_init.sql  doc.md  ecobenchmark.ipynb  parse-raw-data.py
runner/: Cargo.toml  Dockerfile  README.md  build.sh  scenario.js
script/: hosts  hosts-default  inventory-go-pgx  inventory-go-pgx-default  inventory-jvm-java-quarkus  inventory-jvm-java-quarkus-reactive  inventory-jvm-kotlin-spring  inventory-jvm-kotlin-spring-default  inventory-native-java-quarkus  inventory-node-express-sequelize  inventory-node-express-sequelize-default  inventory-php-symfony  inventory-php-symfony-default  inventory-rust-actix-sqlx  inventory-rust-actix-sqlx-default  readme.md  run-all.sh  site.yml
service/: EcobenchmarkBackEnd-0.0.1-swagger.yaml  specs.md
service/rust-actix-native/: Cargo.toml  Dockerfile  docker-compose.yml
service/rust-actix-native/src/: error.rs
service/rust-actix-native/src/handler/: accounts_create.rs  health.rs  lists_create.rs  lists_list.rs  stats.rs  tasks_create.rs
service/rust-actix-native/src/model/: stats.rs
service/rust-actix-native/src/model/account/: create.rs  mod.rs
service/rust-actix-native/src/model/list/: create.rs  list.rs  mod.rs
service/rust-actix-native/src/model/task/: create.rs  mod.rs
service/rust-actix-native/src/service/: database.rs
test/: README.md  (+1 more)
(+2451 files in other folders)
