[package]
name = "rust-actix-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0" }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
num-traits = { version = "0.2.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
url = { version = "2.3" }
uuid = { version = "1.1", features = ["serde", "v4"] }
